--- a/src/assets/style/vars.scss
+++ b/src/assets/style/vars.scss
@@ -3,3 +3,5 @@
 $violet-color: #5b2ca2;
 $light-violet-color: #bda2f3;
 $grey-color: #929295;
+$blue-color: #0a5e6c;
+$beige-color: #f0caa1;
